# BattleCityRemastered

./: .clang-format  .gitignore  BattleCityRemastered.sln  BattleCityRemastered.vcxproj  BattleCityRemastered.vcxproj.filters  CMakeLists.txt  Environment.cpp  Environment.h  LICENSE  README.md  main.cpp  packages.config  resource.h
Client/: Client.cpp  Client.h  Client.tpp  Client.vcxproj  Client.vcxproj.filters  GameSuccess.cpp  GameSuccess.h  packages.config  resource.h
Resources/Fonts/: info.txt
UnitTests/: BonusTests.cpp  BulletsTests.cpp  MockBullet.h  MockPlayerOne.h  PlayerTests.cpp  RespawnTankTests.cpp  StatisticsTests.cpp  UnitTests.vcxproj  packages.config  tests.cpp
headers/: BaseObj.h  BaseObjProperty.h  Bonus.h  BonusGrenade.h  BonusHelmet.h  BonusSystem.h  BonusTeamFreeze.h  BonusTimer.h  Brick.h  Bullet.h  BulletPool.h  Circle.h  Client.h  Client.tpp  ClientHandler.h  ColliderCheck.h  Config.h  ConfigFailure.h  ConfigSuccess.h  CoopAI.h  Direction.h  Enemy.h  Environment.h  EventSystem.h  EventSystem.tpp  Game.h  GameFailure.h  GameMode.h  GameStatistics.h  GameSuccess.h  IConfig.h  IDestroyable.h  IDrawable.h  IMovable.h  IMoveBeh.h  IObstacle.h  IObsticle.h  ITickUpdatable.h  InputProviderForMenu.h  InputProviderForPlayerOne.h  (+31 more)
headers/Interfaces/: IDrawable.h  IGame.h  IHealthBar.h  IInputProvider.h  IMovable.h  IMoveBeh.h  IObstacle.h  IPickUpBonus.h  IPickupableBonus.h  ISendableDamageStatistics.h  ITickUpdatable.h
headers/application/: ConfigFailure.h  ConfigSuccess.h  GameFailure.h  GameSuccess.h  SDLEnvironment.h  UserInput.h  Window.h
headers/behavior/: MoveLikeAIBeh.h  MoveLikeBulletBeh.h  MoveLikeTankBeh.h  ShootingBeh.h
headers/bonuses/: Bonus.h  BonusGrenade.h  BonusHelmet.h  BonusShovel.h  BonusSpawner.h  BonusStar.h  BonusStatus.h  BonusSystem.h  BonusTank.h  BonusTimer.h  BonusType.h  BonusTypeId.h
headers/components/: BulletPool.h  EventSystem.h  EventSystem.tpp  GameStatistics.h  Menu.h  ObstacleSpawner.h  ObstacleSpawner.tpp  TankSpawner.h
headers/enums/: BonusType.h  GameMode.h  ObstacleType.h
headers/input/: InputProviderForMenu.h  InputProviderForPlayerOne.h  InputProviderForPlayerOneNet.h  InputProviderForPlayerTwo.h  InputProviderForPlayerTwoNet.h
headers/interfaces/: IHaveFraction.h  IHealthBar.h  IInputProvider.h  IMoveBeh.h  INetworkNode.h  IPickupableBonus.h  ISendableDamageStatistics.h  IShootable.h
headers/network/: Client.h  Client.tpp  ClientHandler.h  Server.h  Server.tpp  ServerHandler.h
headers/obstacles/: Brick.h  BrickWall.h  FortressObstacle.h  FortressWall.h  Iron.h  Obstacle.h  ObstacleAroundFortress.h  ObstacleSpawner.h  ObstacleSpawner.tpp  ObstacleTypeId.h  SteelWall.h  Water.h  WaterTile.h
headers/pawns/: Bot.h  Bullet.h  CoopAI.h  CoopBot.h  Enemy.h  Pawn.h  PawnProperty.h  Player.h  PlayerOne.h  PlayerTwo.h  Tank.h  TankSpawner.h
headers/utils/: ColliderCheck.h  ColliderUtils.h  PixelUtils.h  TimeUtils.h
source/: BaseObj.cpp  Bonus.cpp  BonusGrenade.cpp  BonusHelmet.cpp  BonusSystem.cpp  BonusTimeFreeze.cpp  Brick.cpp  Bullet.cpp  BulletPool.cpp  Client.cpp  ClientHandler.cpp  ColliderCheck.cpp  Config.cpp  ConfigFailure.cpp  ConfigSuccess.cpp  CoopAI.cpp  Enemy.cpp  Environment.cpp  Game.cpp  GameFailure.cpp  GameStatistics.cpp  GameSuccess.cpp  InputProviderForMenu.cpp  InputProviderForPlayerOne.cpp  InputProviderForPlayerOneNet.cpp  InputProviderForPlayerTwo.cpp  InputProviderForPlayerTwoNet.cpp  Iron.cpp  LineOfSight.cpp  Map.cpp  Menu.cpp  MoveLikeAIBeh.cpp  MoveLikeBulletBeh.cpp  MoveLikeTankBeh.cpp  ObjRectangle.cpp  Pawn.cpp  PlayerOne.cpp  PlayerTwo.cpp  Rectangle.cpp  SDLEnvironment.cpp  (+8 more)
source/Obstacles/: Brick.cpp  BrickWall.cpp  FortressObstacle.cpp  FortressWall.cpp  Iron.cpp  Obstacle.cpp  ObstacleAroundFortress.cpp  ObstacleSpawner.cpp  SteelWall.cpp  Water.cpp  WaterTile.cpp
source/Utils/: ColliderCheck.cpp  ColliderUtils.cpp  TimeUtils.cpp
source/application/: ConfigFailure.cpp  ConfigSuccess.cpp  GameFailure.cpp  GameSuccess.cpp  SDLEnvironment.cpp  UserInput.cpp  Window.cpp
source/behavior/: MoveLikeAIBeh.cpp  MoveLikeBulletBeh.cpp  MoveLikeTankBeh.cpp  ShootingBeh.cpp
source/bonuses/: Bonus.cpp  BonusGrenade.cpp  BonusHelmet.cpp  BonusShovel.cpp  BonusSpawner.cpp  BonusStar.cpp  BonusStatus.cpp  BonusSystem.cpp  BonusTank.cpp  BonusTimer.cpp
source/components/: BonusSpawner.cpp  BulletPool.cpp  GameStatistics.cpp  LineOfSight.cpp  Menu.cpp  ObstacleSpawner.cpp  TankSpawner.cpp
source/input/: InputProviderForMenu.cpp  InputProviderForPlayerOne.cpp  InputProviderForPlayerOneNet.cpp  InputProviderForPlayerTwo.cpp  InputProviderForPlayerTwoNet.cpp
source/network/: Client.cpp  ClientHandler.cpp  Server.cpp  ServerHandler.cpp
source/pawns/: Bot.cpp  Bullet.cpp  CoopAI.cpp  CoopBot.cpp  Enemy.cpp  Pawn.cpp  Player.cpp  PlayerOne.cpp  PlayerTwo.cpp  Tank.cpp  TankSpawner.cpp
